compiler/tests/fail/typing/only_param.jazz
export fn main () {
  reg u64 x;
  reg u64[x] a;
}
